feat(api-sheriff): wire Vert.x edge, hardening, and remove Plan-01 placeholders
Add GatewayEdgeRoute: a catch-all Vert.x data-plane route that runs stages 0-7 per request on a virtual thread, including stage 5 (zero-trust forward policy) using each route's resolved effectiveForward plus the global forwarded block (boot-parsed trusted_proxies + emit mode). Assemble routes at boot via RouteRuntimeAssembler with real Vert.x-client, SmallRye-Guard, and SecurityConfiguration factories, a shared SecurityEventCounter, a default SecurityConfiguration, ForwardedHeaderResolver, TcpPeerGate, and GatewayEventCounter. Render rejections as RFC 9457 problem+json.

Add EdgeHardeningOptions: an HttpServerOptionsCustomizer applying max header size, max initial-line length, max chunk size, and idle timeout, plus a pre-dispatch admission cap and a bounded graceful SIGTERM drain.

Carry effectiveAllowedPaths on RouteRuntime so stage 3 enforces the per-route allowed_paths whitelist (a gateway concept absent from cui-http SecurityConfiguration).

Remove the Plan-01 placeholders (ApiSheriff, ApiSheriffProducer, GatewayResource, ProxyRoute, ProxyLogMessages, their package-infos and tests) now that the real edge is wired. Retain quarkus-resteasy (documented in the pom): the JAX-RS GatewayExceptionMapper and token-sheriff-client-quarkus's RFC 9457 mapper still need the JAX-RS runtime.

The pre-commit OpenRewrite gate applied a one-time module-wide import-group separator normalization.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>

Claude-Session: https://claude.ai/code/session_012ByJaCDmwjrCug2LK6FbEB